SUBDIRS	= vm.d

profiledir = $(sysconfdir)/$(PACKAGE)/profiles

dist_profile_DATA = \
debian-lenny-i386.cfg \
fedora-13-i386.cfg \
fedora-14-i386.cfg \
rhel-3-0-i386.cfg \
rhel-3-1-i386.cfg \
rhel-3-2-i386.cfg \
rhel-3-3-i386.cfg \
rhel-3-4-i386.cfg \
rhel-3-5-i386.cfg \
rhel-3-6-i386.cfg \
rhel-3-7-i386.cfg \
rhel-3-8-i386.cfg \
rhel-3-9-i386.cfg \
rhel-4-0-i386.cfg \
rhel-4-1-i386.cfg \
rhel-4-2-i386.cfg \
rhel-4-3-i386.cfg \
rhel-4-4-i386.cfg \
rhel-4-5-i386.cfg \
rhel-4-6-i386.cfg \
rhel-4-7-i386.cfg \
rhel-4-8-i386.cfg \
rhel-5-0-i386.cfg \
rhel-5-1-i386.cfg \
rhel-5-2-i386.cfg \
rhel-5-3-i386.cfg \
rhel-5-4-i386.cfg \
rhel-5-5-i386.cfg \
rhel-5-jboss.cfg \
rhel-5-satellite.cfg \
rhel-6-0-i386.cfg \
ubuntu-lucid-i386.cfg \
site.cfg \
$(NULL)

