SUBDIRS	= vm.d

profiledir = $(sysconfdir)/$(PACKAGE)/profiles

dist_profile_DATA = \
debian-squeeze.cfg \
fedora-13.cfg \
fedora-14.cfg \
rhel-3-0.cfg \
rhel-3-1.cfg \
rhel-3-2.cfg \
rhel-3-3.cfg \
rhel-3-4.cfg \
rhel-3-5.cfg \
rhel-3-6.cfg \
rhel-3-7.cfg \
rhel-3-8.cfg \
rhel-3-9.cfg \
rhel-4-0.cfg \
rhel-4-1.cfg \
rhel-4-2.cfg \
rhel-4-3.cfg \
rhel-4-4.cfg \
rhel-4-5.cfg \
rhel-4-6.cfg \
rhel-4-7.cfg \
rhel-4-8.cfg \
rhel-4-latest.cfg \
rhel-5-0.cfg \
rhel-5-1.cfg \
rhel-5-2.cfg \
rhel-5-3.cfg \
rhel-5-4.cfg \
rhel-5-5.cfg \
rhel-5-6.cfg \
rhel-5-jboss.cfg \
rhel-5-satellite.cfg \
rhel-6-0.cfg \
ubuntu-lucid.cfg \
rhel-5-cluster.cfg \
rhel-5-latest.cfg \
site.cfg \
$(NULL)

