profiledir = $(sysconfdir)/$(PACKAGE)/profiles/vm.d

dist_profile_DATA = \
debian-lenny-vm-0.cfg \
fedora-13-vm-0.cfg \
fedora-14-vm-0.cfg \
jboss-0.cfg \
jon-0.cfg \
jon-1.cfg \
rhel-3-0-vm-0.cfg \
rhel-3-1-vm-0.cfg \
rhel-3-2-vm-0.cfg \
rhel-3-3-vm-0.cfg \
rhel-3-4-vm-0.cfg \
rhel-3-5-vm-0.cfg \
rhel-3-6-vm-0.cfg \
rhel-3-7-vm-0.cfg \
rhel-3-8-vm-0.cfg \
rhel-3-9-vm-0.cfg \
rhel-4-0-vm-0.cfg \
rhel-4-1-vm-0.cfg \
rhel-4-2-vm-0.cfg \
rhel-4-3-vm-0.cfg \
rhel-4-4-vm-0.cfg \
rhel-4-5-vm-0.cfg \
rhel-4-6-vm-0.cfg \
rhel-4-7-vm-0.cfg \
rhel-4-8-vm-0.cfg \
rhel-5-4-vm-0.cfg \
rhel-5-5-vm-0.cfg \
rhel-5-6-vm-0.cfg \
rhel-5-cluster-1.cfg \
rhel-5-cluster-2.cfg \
rhel-5-cluster-3.cfg \
rhel-5-cluster-4.cfg \
rhel-5-cluster-5.cfg \
rhel-5-luci-0.cfg \
rhel-5-mrg-0.cfg \
rhel-5-mrg-1.cfg \
rhel-5-mrg-2.cfg \
rhel-5-mrg-3.cfg \
rhel-5-mrg-4.cfg \
rhel-5-mrg-5.cfg \
rhel-5-satellite-0.cfg \
rhel-5-satellite-1.cfg \
rhel-6-0-vm-0.cfg \
rhel-6-0-vm-1.cfg \
ubuntu-lucid-vm-0.cfg \
$(NULL)


